tests/NormalTests/paczka1/small_fuzzy/18342133.err
Error in line 4: CyfUmjTXZI S549 53,1
Error in line 9: hLuhHZO7oQ5 A613 52,5
